force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__AdditionalDiscount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AdditionalDiscount__c</fullName>
        <description>Total additional discount extends on this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</description>
        <formula>(SBQQ__RegularPrice__c - SBQQ__CustomerPrice__c) *  SBQQ__EffectiveQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total additional discounts extended to this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</inlineHelpText>
        <label>Additional Disc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>