force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__AdditionalDiscountAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional customer discount extended on this line item in terms of absolute amount.</description>
        <inlineHelpText>Additional customer discount extended on this line item in the form of an absolute amount.</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>