force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__BlockPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Block Price record used to price this line item.</description>
        <inlineHelpText>Block Price record used to price this line item.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Web Quote Lines</relationshipLabel>
        <relationshipName>WebQuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>