force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Bundle__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this line item represents a package -- meaning it includes other line items in this quote.</description>
        <inlineHelpText>Indicates this line item represents a package -- meaning it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </CustomField>