force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Bundled__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </CustomField>