force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ComponentCost__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentCost__c</fullName>
        <description>Total cost of components in this package.</description>
        <inlineHelpText>Total cost of components in this package.</inlineHelpText>
        <label>Component Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>