force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ComponentListTotal__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentListTotal__c</fullName>
        <description>Total list amount of components in this configuration. This field is only populated if this line item references a configurable product.</description>
        <inlineHelpText>Total list amount of components in this configuration. This field is only populated if this line item references a configurable product.</inlineHelpText>
        <label>Component List Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>