force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ComponentUpliftedByPackage__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentUpliftedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes uplift for this component to the parent package uplift. Uplift only applies to multi-segmented products.</description>
        <inlineHelpText>Fixes uplift for this component to the parent package uplift. Uplift only applies to multi-segmented products.</inlineHelpText>
        <label>Component Uplifted By Package</label>
        <type>Checkbox</type>
    </CustomField>