force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ComponentVisibility__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentVisibility__c</fullName>
        <description>Indicates the visibility of the component line item.</description>
        <formula>TEXT(SBQQ__ProductOption__r.SBQQ__QuoteLineVisibility__c)</formula>
        <inlineHelpText>Indicates the visibility of the component line item.</inlineHelpText>
        <label>Component Visibility</label>
        <type>Text</type>
    </CustomField>