force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__CompoundDiscountRate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompoundDiscountRate__c</fullName>
        <description>Discount rate compounded by quantity (historic).</description>
        <inlineHelpText>Discount rate compounded by quantity (historic).</inlineHelpText>
        <label>Compound Discount (%)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </CustomField>