force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ConfigurationRequired__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfigurationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that marks this quote line as requiring configuration. Can be used by custom code to request this product be re-configured.</description>
        <inlineHelpText>Select the checkbox if the quote line requires configuration. Can be used by custom code to request this product be re-configured.</inlineHelpText>
        <label>Configuration Required</label>
        <type>Checkbox</type>
    </CustomField>