force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ContractedPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ContractedPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contracted price if the product has negotiated pricing for the opportunity&#39;s account.</description>
        <inlineHelpText>Contracted price if the product has negotiated pricing for the opportunity&#39;s account.</inlineHelpText>
        <label>Contracted Price</label>
        <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>WebQuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>