force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__CustomerPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CustomerPrice__c</fullName>
        <description>Customer unit price for the product quoted by this line item. This is the Net Unit Price excluding any partner discounts.</description>
        <inlineHelpText>Customer unit price for the product quoted by this line item. This is the Net Unit Price excluding any partner discounts.</inlineHelpText>
        <label>Customer Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>