force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__DefaultSubscriptionTerm__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DefaultSubscriptionTerm__c</fullName>
        <description>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</description>
        <inlineHelpText>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</inlineHelpText>
        <label>Default Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>