force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Dimension__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For MDQ products, this allows each segment to be priced independently.</description>
        <inlineHelpText>For MDQ products, each segment will be priced independently.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Web Quote Lines</relationshipLabel>
        <relationshipName>Web_Quote_Lines</relationshipName>
        <type>Lookup</type>
    </CustomField>