force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Discount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Additional customer discount extended for this line item expressed in terms of percentage.</description>
        <inlineHelpText>Additional customer discount extended to this line item expressed in form of a percentage.</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>