force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__DiscountSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule to be used in computing volume unit price. This field is copied from the corresponding product.</description>
        <inlineHelpText>Discount schedule to be used in computing volume unit price. This field is copied from the corresponding product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Web Quote Lines</relationshipLabel>
        <relationshipName>WebQuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>