force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__DiscountTier__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount tier used by this line item. This field is only populated if a volume discounted was applied and discount schedule is of type &quot;Range&quot;.</description>
        <inlineHelpText>Discount tier used by this line item. This field is only populated if a volume discounted was applied and discount schedule is of type &quot;Range&quot;.</inlineHelpText>
        <label>Discount Tier</label>
        <referenceTo>SBQQ__DiscountTier__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>WebQuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>