force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__DistributorDiscount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Distributor discount applied to this line.</description>
        <inlineHelpText>Distributor discount applied to this line.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>