force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__EffectiveEndDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EffectiveEndDate__c</fullName>
        <description>Effective end date for this subscription.</description>
        <formula>IF(ISBLANK(SBQQ__EndDate__c),
  SBQQ__Quote__r.SBQQ__EndDate__c,
  SBQQ__EndDate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective end date for this subscription.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </CustomField>