force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__EffectiveQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EffectiveQuantity__c</fullName>
        <description>Effective quantity used in computing totals. Same as quantity unless the product is block priced or covered by &quot;Slab&quot; discount schedule.</description>
        <formula>CASE(SBQQ__PricingMethod__c,
  &#39;Block&#39;, 1,
  IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &#39;Slab&#39;), 1, 
    IF(SBQQ__Existing__c, SBQQ__Quantity__c - SBQQ__PriorQuantity__c, SBQQ__Quantity__c)
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective quantity used in computing totals. Same as quantity unless the product is block priced or covered by &quot;Slab&quot; discount schedule.</inlineHelpText>
        <label>Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>