force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__EffectiveStartDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EffectiveStartDate__c</fullName>
        <description>Effective start date for this subscription.</description>
        <formula>IF(ISBLANK(SBQQ__StartDate__c),
  SBQQ__Quote__r.SBQQ__StartDate__c,
  SBQQ__StartDate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective start date for this subscription.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </CustomField>