force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__EndDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>Date the service represented by this line item will end (only applies if product is a subscription).</description>
        <inlineHelpText>Date the service represented by this line item will end (only applies if product is a subscription).</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>