force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Hidden__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides this line item from generated PDF.</description>
        <inlineHelpText>Select the checkbox to hide this line item from generated PDF.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </CustomField>