force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Incomplete__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Incomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag set internally by the application logic when a line is saved to the database that&#39;s incomplete. This may happen when price rules are evaluated. Test this field in validation rules to avoid them from firing prematurely. Do NOT add to page layout or otherwise update.</description>
        <inlineHelpText>Select the checbox to apply internal application logic, which controls when rules, such as validation rules, trigger. Do NOT add to page layout or otherwise update.</inlineHelpText>
        <label>Incomplete</label>
        <type>Checkbox</type>
    </CustomField>