force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ListTotal__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ListTotal__c</fullName>
        <description>List total price for this quote line item.</description>
        <formula>IF(OR(SBQQ__Renewal__c, SBQQ__Bundled__c), 0,
  CASE(SBQQ__PricingMethod__c,
    &#39;Block&#39;, IF(ISBLANK(SBQQ__ProratedListPrice__c),SBQQ__ListPrice__c * IF(ISBLANK(SBQQ__ProrateMultiplier__c),1, SBQQ__ProrateMultiplier__c),SBQQ__ProratedListPrice__c),
    IF(ISBLANK(SBQQ__ProratedListPrice__c),SBQQ__ListPrice__c * IF(ISBLANK(SBQQ__ProrateMultiplier__c),1, SBQQ__ProrateMultiplier__c),SBQQ__ProratedListPrice__c) * IF(SBQQ__Existing__c, SBQQ__Quantity__c - SBQQ__PriorQuantity__c, SBQQ__Quantity__c)
  )
)</formula>
        <inlineHelpText>List total price for this quote line item.</inlineHelpText>
        <label>List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>