force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Markup__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Markup__c</fullName>
        <description>Markup amount on this item. This value is automatically calculated by applying markup rate or absolute amount, whichever is specified.</description>
        <formula>IF(NOT(ISBLANK(SBQQ__MarkupRate__c)), SBQQ__UnitCost__c * SBQQ__MarkupRate__c, SBQQ__UnitCost__c + SBQQ__MarkupAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Markup amount on this item. This value is automatically calculated by applying markup rate or absolute amount, whichever is specified.</inlineHelpText>
        <label>Markup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>