force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__MarkupAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MarkupAmount__c</fullName>
        <description>Markup on this line item in the form of an absolute amount.</description>
        <inlineHelpText>Markup on this line item in the form of an absolute amount.</inlineHelpText>
        <label>Markup (Amt)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>