force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__MaximumPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MaximumPrice__c</fullName>
        <description>Maximum unit price for this product. Used to enforce price ceiling for products with dynamically calculated prices.</description>
        <inlineHelpText>Maximum unit price for this product. Used to enforce price ceiling for products with dynamically calculated prices.</inlineHelpText>
        <label>Maximum Unit Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>