force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__MinimumPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MinimumPrice__c</fullName>
        <description>Minimum unit price for this product. Used to enforce price floor for products with dynamically calculated prices.</description>
        <inlineHelpText>Minimum unit price for this product. Used to enforce price floor for products with dynamically calculated prices.</inlineHelpText>
        <label>Minimum Unit Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>