force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__NonDiscountable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NonDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item is non-discountable.</description>
        <inlineHelpText>Select the checkbox to indicate if discounts are allowed on this line item.</inlineHelpText>
        <label>Non Discountable</label>
        <type>Checkbox</type>
    </CustomField>