force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__NonPartnerDiscountable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NonPartnerDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this line item is non-discountable for partners.</description>
        <inlineHelpText>Select the checkbox to make this line item non-discountable for partners.</inlineHelpText>
        <label>Non Partner Discountable</label>
        <type>Checkbox</type>
    </CustomField>