force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__OptionType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OptionType__c</fullName>
        <description>Option type copied from related Product Option. Determines how quantity is calculated.</description>
        <inlineHelpText>Option type copied from related Product Option. Determines how quantity is calculated.</inlineHelpText>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>