force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__PackageCost__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PackageCost__c</fullName>
        <description>Total cost for this package including the cost of its components.</description>
        <formula>SBQQ__ComponentCost__c + (SBQQ__UnitCost__c * SBQQ__Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total cost for this package including the cost of its components.</inlineHelpText>
        <label>Package Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>