force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__PackageTotal__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PackageTotal__c</fullName>
        <description>Total price of this package including its components.</description>
        <formula>SBQQ__ComponentTotal__c + SBQQ__NetTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total price of this package including its components.</inlineHelpText>
        <label>Package Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>