force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__PartnerPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PartnerPrice__c</fullName>
        <description>Partner unit price. Price after partner discount but before distributor discount.</description>
        <inlineHelpText>Partner unit price. Price after partner discount but before distributor discount.</inlineHelpText>
        <label>Partner Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>