force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__PartnerTotal__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PartnerTotal__c</fullName>
        <formula>IF(SBQQ__Renewal__c, 0, SBQQ__PartnerPrice__c * SBQQ__EffectiveQuantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Partner total</inlineHelpText>
        <label>Partner Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>